Overflow fixes

--- a/resources/sass/_blog.scss
+++ b/resources/sass/_blog.scss
@@ -8,6 +8,10 @@
 		box-shadow: 0 13px 27px -5px rgba(50,50,93,.25);
 	}
 
+	p, a {
+		overflow-wrap: break-word;
+	}
+
 	p > code {
 		@apply bg-pink-lighter
 			text-white
